@@ -1,3 +1,5 @@
+- passing arguments to ILazyComponentLoader (see breakingchanges.txt)
+x
 - fixed bug that caused exception when proxied component and it's proxied property dependency shared interceptor
 
 2.5.0 beta2 (2010-07-21)
